# CypteCipher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
bindings/: Cargo.toml  package.json
bindings/src/: lib.rs
bindings/test/: test.js
core/: Cargo.toml
core/src/: bip39.rs  btc.rs  btc_htlc.rs  hardware.rs  keystore.rs  lib.rs  lightning.rs  lnd.rs  monero.rs  monero_swap.rs  swap_manager.rs  swap_sim.rs  uniffi.rs  wallet_bdk.rs  wallet_manager.rs
core/tests/: uniffi_bridge_tests.rs
core/uniffi/: README.md  cryptec.udl
core/uniffi/bindings/android/: Cryptec.java
core/uniffi/bindings/ios/: Cryptec.h
docs/: ARCHITECTURE.md
electron/: README.md  main.js  package.json  preload.js
electron/renderer/: index.html  renderer.js
electron/test/: electron-smoke.js
mobile/: README.md  jest.config.js  package.json  tsconfig.json
mobile/__tests__/: nativeBridge.test.ts  nativeModuleIntegration.test.ts
mobile/android/src/main/java/com/cryptec/: CryptecModule.java  CryptecPackage.java
mobile/ios/: CryptecModule.m
mobile/src/: App.tsx  nativeBridge.ts
mobile/src/screens/: Onboarding.tsx  WalletHome.tsx
scripts/: uniffi_codegen.sh
tools/cli/: Cargo.toml
tools/cli/src/: main.rs
