[package]
name = "cryptec_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "cryptec_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
hex = "0.4"
secp256k1 = { version = "0.26", default-features = false, features = ["rand"] }

# Bitcoin on-chain utilities
bitcoin = "0.29"
bech32 = "0.8"
sha2 = "0.10"
hmac = "0.12"

# BIP39 / HD derivation
bip39 = "1.1"
bip32 = "0.3"

# BDK for wallet abstractions (UTXO management, PSBT, descriptors)
bdk = { version = "0.27", features = ["keys-bip39", "electrum", "sqlite"] }

# Rust-Lightning (lightning protocol) - add as an optional dependency when needed
# lightning = { version = "0.0.124", optional = true }  # disabled because some versions may be yanked

# Crypto / storage / tools
argon2 = "0.4"
aes-gcm = "0.10"
base64 = "0.21"
keyring = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hidapi = "1.3"

# Monero (RPC client)
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
monero = "0.18"

# Windows-specific secure-delete dependency
winapi = { version = "0.3", optional = true, features = ["winbase"] }

# Note: Additional features and platform-specific flags will be required for full implementations

